--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -23,14 +23,14 @@
   <% end %>
   </span>	
 
-  <span style="position:absolute;">
-  <% if signed_in? %>
-  <%=  link_to(vote_up_micropost_path(micropost.id), :remote => true) do |f| %> 
-  <barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>+</h3></barr>	
-  <% end %>
-  <% else %>
-  <barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>+</h3></barr>
-  <% end %>
+  <span id="<%=micropost.id%>"style="position:absolute;">
+	  <% if current_user.voted_for?(micropost) %>
+	 	<barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>✓</h3></barr>
+	  <% else %>
+		<%=  link_to(vote_up_micropost_path(micropost.id), :remote => true) do |f| %> 
+		<barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3>+</h3></barr>	
+		<% end %>
+	  <% end %>
   </span>
 
 
@@ -39,7 +39,7 @@
 
 
 
-<div class="modal hide" id="<%= micropost.id %>4" style="position:fixed;margin-left:-470px;height:90%;top:270px;width:940px;background-color:#953361;">
+<div class="modal hide" id="<%= micropost.id %>4" style="position:fixed;margin-left:-470px;height:90%;top:270px;width:940px;background-color:black;border: 5px solid white;">
 	
 
   <div><%= image_tag micropost.image_url(:lmicropost) if micropost.image? %></div>
